--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,3 +30,8 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* Règles de base                                                    */
 /* ///////////////////////////////////////////////////////////////// */
 @import "base/h";
+
+/* ///////////////////////////////////////////////////////////////// */
+/* Règles de la pagination                                           */
+/* ///////////////////////////////////////////////////////////////// */
+@import "layout";
