--- a/style.css
+++ b/style.css
@@ -343,4 +343,26 @@ template {
 /*https://developer.mozilla.org/en-US/docs/Web/CSS/clamp*/
 h1 {
   font-size: clamp(1rem, -0.5714rem + 6.2857vw, 3.75rem);
+}
+
+/* ///////////////////////////////////////////////////////////////// */
+/* Règles de la pagination                                           */
+/* ///////////////////////////////////////////////////////////////// */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.global {
+  display: flex;
+  justify-content: center;
+}
+
+.global > section, .global > header, .global > footer {
+  width: 1100px;
+  border: 1px solid #aaa;
+}
+
+#entete {
+  background-color: var(--couleur-arriere-entete);
 }/*# sourceMappingURL=style.css.map */
