--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,8 +2,9 @@
 
     /*https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties*/
 
-    --couleur-arriere-entete: #ccc;
-    --couleur-arriere-accueil: #ddd;
-    --couleur-arriere-evenement: #dd1;
-    --couleur-arriere-footer: #aaa;
+    --couleur-arriere-entete: #ffffff;
+    --couleur-arriere-accueil: #83ffb5 ;
+    --couleur-arriere-evenement: #30a029;
+    --couleur-arriere-galerie : #1dff74;
+    --couleur-arriere-footer: #133d0e ;
 }
