--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* ///////////////////////////////////////////////////////////////// */
 :root {
   /*https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties*/
-  --couleur-arriere-entete: #ccc;
-  --couleur-arriere-accueil: #ddd;
-  --couleur-arriere-evenement: #dd1;
-  --couleur-arriere-footer: #aaa;
+  --couleur-arriere-entete: #ffffff;
+  --couleur-arriere-accueil: #83ffb5 ;
+  --couleur-arriere-evenement: #30a029;
+  --couleur-arriere-galerie: #1dff74;
+  --couleur-arriere-footer: #133d0e ;
 }
 
 /* ///////////////////////////////////////////////////////////////// */
@@ -30,7 +31,13 @@ Ce thème a été développé dans le cadre du cours 4W4
 /*https://clamp.font-size.app/?config=eyJyb290IjoiMTYiLCJtaW5XaWR0aCI6IjUwMHB4IiwibWF4V2lkdGgiOiI5MDBweCIsIm1pbkZvbnRTaXplIjoiMTZweCIsIm1heEZvbnRTaXplIjoiNDhweCJ9*/
 /*https://developer.mozilla.org/en-US/docs/Web/CSS/clamp*/
 h1 {
+  font-size: clamp(1.5rem, -2.075rem + 14vw, 5rem);
+  color: rgba(0, 0, 0, 0.7);
+}
+
+h2 {
   font-size: clamp(1rem, -0.5714rem + 6.2857vw, 3.75rem);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 /* ///////////////////////////////////////////////////////////////// */
@@ -39,18 +46,49 @@ h1 {
 body {
   display: flex;
   flex-direction: column;
+  font-family: "roboto", sans-serif;
 }
 
 .global {
   display: flex;
   justify-content: center;
+  min-height: 30vh;
 }
 
 .global > section, .global > header, .global > footer {
-  width: 1100px;
-  border: 1px solid #aaa;
+  flex: 0 1 900px;
+  background-color: rgba(196, 196, 196, 0.1);
+  padding: 5rem;
+}
+
+header, section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #entete {
   background-color: var(--couleur-arriere-entete);
+}
+
+#accueil {
+  background-color: var(--couleur-arriere-accueil);
+}
+
+#galerie {
+  background-color: var(--couleur-arriere-galerie);
+}
+
+#evenement {
+  background-color: var(--couleur-arriere-evenement);
+}
+
+#footer {
+  background-color: var(--couleur-arriere-footer);
 }/*# sourceMappingURL=style.css.map */
