--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -6,18 +6,10 @@
 
 h1{
     font-size: clamp(1.5rem, -2.075rem + 14vw, 5rem);
-    color: rgba(#000, 0.7);
+    color: rgba(#000, 0.5);
 }
 
-h2{
+h2,h3,h4,h5{
     font-size: clamp(1rem, -0.5714rem + 6.2857vw, 3.75rem);
-    color: rgba(#000, 0.7);
-}
-
-p{
-
-}
-
-hr{
-
+    color: rgba(#000, 0.8);
 }
