--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ Ce thème a été développé dans le cadre du cours 4W4
 /*https://developer.mozilla.org/en-US/docs/Web/CSS/clamp*/
 h1 {
   font-size: clamp(1.5rem, -2.075rem + 14vw, 5rem);
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.5);
 }
 
-h2 {
+h2, h3, h4, h5 {
   font-size: clamp(1rem, -0.5714rem + 6.2857vw, 3.75rem);
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.8);
 }
 
 /* ///////////////////////////////////////////////////////////////// */
@@ -56,7 +56,7 @@ body {
 }
 
 .global > section, .global > header, .global > footer {
-  flex: 0 1 900px;
+  flex: 0 1 1000px;
   background-color: rgba(196, 196, 196, 0.1);
   padding: 5rem;
 }
