--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ h3, h4, h5 {
   font-size: clamp(1rem, 0.917rem + 0.333vw, 1.125rem);
 }
 
+h1:hover, h2:hover, h3:hover, h4:hover, h5:hover {
+  background-color: rgb(255, 255, 255);
+  transition: 3s;
+}
+
 /* ///////////////////////////////////////////////////////////////// */
 /* Règles de la pagination                                           */
 /* ///////////////////////////////////////////////////////////////// */
