--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,24 @@
 :root{
 
     /*https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties*/
-
+    /*
     --couleur-arriere-entete: #ffffff;
     --couleur-arriere-accueil: #83ffb5 ;
     --couleur-arriere-evenement: #30a029;
     --couleur-arriere-galerie : #1dff74;
-    --couleur-arriere-footer: #133d0e ;
+    --couleur-arriere-footer: #133d0e;
+    */
+
+
+    --couleur-arriere-entete: hsl(0, 100%, 50%);
+    --couleur-arriere-accueil: hsl(60, 100%, 50%);
+    --couleur-arriere-evenement: hsl(120, 100%, 50%);
+    --couleur-arriere-galerie : hsl(180, 100%, 50%);
+    --couleur-arriere-footer: hsl(240,100%, 50%);
+
+    --couleur-entete: hsl(0, 100%, 15%);
+    --couleur-accueil: hsl(60, 100%, 15%);
+    --couleur-evenement: hsl(120, 100%, 15%);
+    --couleur-galerie : hsl(180, 100%, 15%);
+    --couleur-footer: hsl(240,100%, 15%);
 }
