--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,7 +13,7 @@
     --nb-element : 5;
     --increment-angle : calc(360/var(--nb-element));
     // 360 / 5 = 72
-    --angle-initial: 180;
+    --angle-initial: 224;
     --hu1 : var(--angle-initial);
     --hu2 : calc(var(--hu1) + var(--increment-angle));
     --hu3 : calc(var(--hu2) + var(--increment-angle));
@@ -29,6 +29,7 @@
     --s-couleur : 100%; //Saturation
     --l-couleur : 80%; //Luminosité
 
+    /*
     --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), var(--l-couleur-arriere));
     --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), var(--l-couleur-arriere));
     --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), var(--l-couleur-arriere));
@@ -40,4 +41,14 @@
     --couleur-evenement: hsl(var(--hu3), var(--s-couleur), var(--l-couleur));
     --couleur-galerie : hsl(var(--hu4), var(--s-couleur), var(--l-couleur));
     --couleur-footer: hsl(var(--hu5),var(--s-couleur), var(--l-couleur));
+    */
+
+    // Couleur complémentaire
+    --hu2: calc(var(--hu1) + 180);
+
+    --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), 60%);
+    --couleur-arriere-accueil: hsl(var(--hu1), var(--s-couleur-arriere), 65%);
+    --couleur-arriere-evenement: hsl(var(--hu1), var(--s-couleur-arriere), 70%);
+    --couleur-arriere-galerie : hsl(var(--hu2), var(--s-couleur-arriere), 75%);
+    --couleur-arriere-footer: hsl(var(--hu1),var(--s-couleur-arriere), 80%);
 }
