--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ Ce thème a été développé dans le cadre du cours 4W4
   */
   --nb-element: 5;
   --increment-angle: calc(360/var(--nb-element));
-  --angle-initial: 180;
+  --angle-initial: 224;
   --hu1: var(--angle-initial);
   --hu2: calc(var(--hu1) + var(--increment-angle));
   --hu3: calc(var(--hu2) + var(--increment-angle));
@@ -39,16 +39,25 @@ Ce thème a été développé dans le cadre du cours 4W4
   /* Couleur avant-plan */
   --s-couleur: 100%;
   --l-couleur: 80%;
+  /*
   --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), var(--l-couleur-arriere));
   --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), var(--l-couleur-arriere));
   --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), var(--l-couleur-arriere));
-  --couleur-arriere-galerie: hsl(var(--hu4), var(--s-couleur-arriere), var(--l-couleur-arriere));
+  --couleur-arriere-galerie : hsl(var(--hu4), var(--s-couleur-arriere), var(--l-couleur-arriere));
   --couleur-arriere-footer: hsl(var(--hu5),var(--s-couleur-arriere), var(--l-couleur-arriere));
+
   --couleur-entete: hsl(var(--hu1), var(--s-couleur), var(--l-couleur));
   --couleur-accueil: hsl(var(--hu2), var(--s-couleur), var(--l-couleur));
   --couleur-evenement: hsl(var(--hu3), var(--s-couleur), var(--l-couleur));
-  --couleur-galerie: hsl(var(--hu4), var(--s-couleur), var(--l-couleur));
+  --couleur-galerie : hsl(var(--hu4), var(--s-couleur), var(--l-couleur));
   --couleur-footer: hsl(var(--hu5),var(--s-couleur), var(--l-couleur));
+  */
+  --hu2: calc(var(--hu1) + 180);
+  --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), 60%);
+  --couleur-arriere-accueil: hsl(var(--hu1), var(--s-couleur-arriere), 65%);
+  --couleur-arriere-evenement: hsl(var(--hu1), var(--s-couleur-arriere), 70%);
+  --couleur-arriere-galerie: hsl(var(--hu2), var(--s-couleur-arriere), 75%);
+  --couleur-arriere-footer: hsl(var(--hu1),var(--s-couleur-arriere), 80%);
 }
 
 /* ///////////////////////////////////////////////////////////////// */
@@ -91,7 +100,6 @@ body {
 
 .global > section, .global > header, .global > footer {
   flex: 0 1 1000px;
-  background-color: rgba(15, 1, 1, 0.1);
   padding: 5rem;
 }
 
@@ -111,6 +119,7 @@ footer {
 #entete {
   background-color: var(--couleur-arriere-entete);
   color: var(--couleur-entete);
+  position: relative;
 }
 
 #accueil {
@@ -121,14 +130,57 @@ footer {
 #galerie {
   background-color: var(--couleur-arriere-galerie);
   color: var(--couleur-galerie);
+  z-index: 1;
+  background: linear-gradient(180deg, var(--couleur-arriere-accueil), var(--couleur-arriere-evenement));
 }
 
 #evenement {
   background-color: var(--couleur-arriere-evenement);
   color: var(--couleur-evenement);
+  position: relative;
 }
 
 #footer {
   background-color: var(--couleur-arriere-footer);
   color: var(--couleur-footer);
+}
+
+.vague {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.vague svg {
+  position: relative;
+  display: block;
+  width: calc(126% + 1.3px);
+  height: 110px;
+}
+
+@media (min-width: 767px) {
+  .vague svg {
+    width: calc(126% + 1.3px);
+    height: 110px;
+  }
+}
+.diagonal {
+  position: relative;
+  isolation: isolate;
+}
+
+.diagonal::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  transform: skewY(-5deg);
+  background-color: var(--couleur-arriere-galerie);
 }/*# sourceMappingURL=style.css.map */
