S2C2: Ajustement de la taille de chacun des h et ajustement de la couleur encore une fois

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,7 +32,12 @@ footer{
 #entete{
     background-color: var(--couleur-arriere-entete);
     color: var(--couleur-entete);
-    position: relative;
+    position: relative;    
+}
+
+.entete__header{
+    display: flex;    
+    flex-direction: column;
 }
 
 #accueil{
