--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -4,18 +4,30 @@
 /*https://developer.mozilla.org/en-US/docs/Web/CSS/clamp*/
 
 
-h1{
-    font-size: clamp(1.5rem, -2.075rem + 14vw, 5rem);
+h1 {
+    font-size: clamp(2rem, 2.075rem + 4vw, 5rem);
 }
 
-h2{
-    font-size: clamp(1rem, -0.5714rem + 6.2857vw, 3.75rem);
+h2 {
+    font-size: clamp(1.5rem, 0.5714rem + 3.7143vw, 3.75rem);
 }
 
-h3,h4,h5{
-    color: aquamarine;
-    font-size: clamp(1rem, 0.917rem + 0.333vw, 1.125rem);
+h3 {
+    font-size: clamp(1.25rem, 1.25rem + 2.5vw, 2.125rem);
 }
+
+h4 {
+    font-size: clamp(1rem, 1rem + 1.5vw, 1.5rem);
+}
+
+h5 {
+    font-size: clamp(0.9rem, 0.9rem + 1vw, 1.25rem);
+}
+
+h6 {
+    font-size: clamp(0.8rem, 0.8rem + 0.8vw, 1rem);
+}
+
 
 h1:hover , h2:hover, h3:hover, h4:hover, h5:hover{
     background-color: rgb(255, 255, 255);
