S2C2: Ajustement des couleurs dans le foote pour respecter la règle 60-30-10. J'ai changé la couleur des liens a et du bouton pour que l'utilisateur sache que ce sont des éléments cliquables

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -42,25 +42,25 @@ footer{
 
 /* Styles pour le link (a) */
 a {
-    color: #007BFF;
+    color: #31572c;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 a:hover {
-    color: #0056b3;
+    color: #4f772d;
 }
 
 /* Styles pour le blockquote */
 blockquote {
-    border-left: 4px solid #007BFF;
+    border-left: 4px solid #31572c;
     margin: 10px 0;
     padding-left: 15px;
 }
 
 /* Styles pour le button */
 button {
-    background-color: #007BFF;
+    background-color: #31572c;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -70,7 +70,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #4f772d;
 }
 
 
