S2C2: Ajout d'un paragraphe avec du texte expliquant ce que j'aime du programme

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,6 +22,11 @@ header, section{
     align-items: center;
 }
 
+.galerie__section{
+    display: flex;
+    flex-direction: column;    
+}
+
 footer{
     display: flex;
     flex-direction: column;
