--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -16,7 +16,7 @@ h3 {
     font-size: clamp(1.25rem, 1.25rem + 2.5vw, 2.125rem);
 }
 
-h4 {
+h4,p {
     font-size: clamp(1rem, 1rem + 1.5vw, 1.5rem);
 }
 
