--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h3 {
   font-size: clamp(1.25rem, 1.25rem + 2.5vw, 2.125rem);
 }
 
-h4 {
+h4, p {
   font-size: clamp(1rem, 1rem + 1.5vw, 1.5rem);
 }
 
@@ -116,6 +116,11 @@ header, section {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.galerie__section {
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
