--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -54,4 +54,10 @@
     --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 70%);
     --couleur-arriere-galerie : hsl(var(--hu4), var(--s-couleur-arriere), 75%);
     --couleur-arriere-footer: hsl(var(--hu5),var(--s-couleur-arriere), 80%);
+
+    --couleur-entete: hsl(var(--hu1), var(--s-couleur-arriere), 20%);
+    --couleur-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 25%);
+    --couleur-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 30%);
+    --couleur-galerie : hsl(var(--hu4), var(--s-couleur-arriere), 35%);
+    --couleur-footer: hsl(var(--hu5),var(--s-couleur-arriere), 40%);
 }
