--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -60,4 +60,12 @@
     --couleur-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 30%);
     --couleur-galerie : hsl(var(--hu4), var(--s-couleur-arriere), 35%);
     --couleur-footer: hsl(var(--hu5),var(--s-couleur-arriere), 40%);
+
+    --couleur-lien: #333;
+    --couleur-lien-hover: #fff;
+    --couleur-lien-visited: #d32f2f;
+
+    --couleur-bouton-linear-gradient-1: #31572c ;
+    --couleur-bouton-linear-gradient-2: rgb(93, 165, 85); 
+
 }
