--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,6 +25,7 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* ///////////////////////////////////////////////////////////////// */
 @import "base/h";
 @import "base/bouton";
+@import "base/liens";
 
 /* ///////////////////////////////////////////////////////////////// */
 /* Règles de la pagination                                           */
