--- a/sass/base/_bouton.scss
+++ b/sass/base/_bouton.scss
@@ -1,14 +1,25 @@
 button {
     font-size: clamp(1.25rem, 0.2083rem + 3.3333vw, 2.5rem);
-    background-image: linear-gradient(#31572c) ;
+    background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-1) , var(--couleur-bouton-linear-gradient-2) );
     color: #fff;
-    padding: 10px 20px;
+    padding: 12px 24px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: transform 0.3s ease;
+    transform: scale(1);
+
+    // button:hover
+    &:hover {
+        background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-2) , var(--couleur-bouton-linear-gradient-1) );
+        transform: scale(1.2);
+    }
+
+    // Button:active
+    &:active{
+        // background-image: var(--couleur-bouton-active);
+    }
+    
 }
 
-button:hover {
-    background-color: #4f772d;
-}
+
