S3C1 : Ajustement de la position du centre de la photo quand elle atteint 1000px et moins avec un media query

--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@ blockquote {
   display: block;
 }
 
+@media screen and (max-width: 1000px) {
+  .entete__header {
+    background-position: center center;
+  }
+}
 .vague {
   position: absolute;
   bottom: -1px;
