--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -7,3 +7,10 @@
 .entete__header span{
     display: block;
 }
+
+
+@media screen and (max-width: 1000px) {
+    .entete__header {
+        background-position: center center;
+    }
+}
