--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -67,5 +67,6 @@
 
     --couleur-bouton-linear-gradient-1: #31572c ;
     --couleur-bouton-linear-gradient-2: rgb(93, 165, 85); 
+    --couleur-dedans-blockquote:#f5f5f5;
 
 }
