--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ Ce thème a été développé dans le cadre du cours 4W4
   --couleur-lien-visited: #d32f2f;
   --couleur-bouton-linear-gradient-1: #31572c ;
   --couleur-bouton-linear-gradient-2: rgb(93, 165, 85);
+  --couleur-dedans-blockquote:#f5f5f5;
 }
 
 /* ///////////////////////////////////////////////////////////////// */
@@ -186,9 +187,12 @@ footer {
 
 /* Styles pour le blockquote */
 blockquote {
-  border-left: 4px solid #31572c;
-  margin: 10px 0;
-  padding-left: 15px;
+  border-left: 4px solid var(--couleur-bouton-linear-gradient-1);
+  margin: 20px 0;
+  padding: 15px;
+  background-color: var(--couleur-dedans-blockquote);
+  color: #333;
+  font-style: italic;
 }
 
 /*Les grandes zones dans la page principale*/
@@ -250,12 +254,6 @@ ul {
 
 ul li {
   margin-bottom: 8px;
-}
-
-blockquote {
-  border-left: 4px solid black;
-  margin: 10px 0;
-  padding-left: 15px;
 }
 
 .entete__header {
