S3C2: Ajout d'une classe sur le button de l'entête pour que ça affecte que ce button et non les autres

--- a/sass/base/_bouton.scss
+++ b/sass/base/_bouton.scss
@@ -1,4 +1,4 @@
-button {
+button.entete__button {
     font-size: clamp(1.25rem, 0.2083rem + 3.3333vw, 2.5rem);
     background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-1) , var(--couleur-bouton-linear-gradient-2) );
     color: #fff;
