--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h6 {
   font-size: clamp(0.8rem, 0.8rem + 0.8vw, 1rem);
 }
 
-button {
+button.entete__button {
   font-size: clamp(1.25rem, 0.2083rem + 3.3333vw, 2.5rem);
   background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-1), var(--couleur-bouton-linear-gradient-2));
   color: #fff;
@@ -114,7 +114,7 @@ button {
   transition: transform 0.3s ease;
   transform: scale(1);
 }
-button:hover {
+button.entete__button:hover {
   background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-2), var(--couleur-bouton-linear-gradient-1));
   transform: scale(1.2);
 }
