S3C2: Ajout d'un nouveau fichier pour le footer et j'ai déplacé le document des composants. J'ai ajouté des liens dans le document des styles et j'ai modifier quelque truc dans le footer comme par exemple enlever le bouton que j'avais mis avant

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,8 +32,15 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* ///////////////////////////////////////////////////////////////// */
 @import "layout";
 
+/* ///////////////////////////////////////////////////////////////// */
+/* Sections de la page                                               */
+/* ///////////////////////////////////////////////////////////////// */
 @import "entete";
+@import "footer";
 
+
+/* ///////////////////////////////////////////////////////////////// */
+/* Les différents effets de la page                                  */
+/* ///////////////////////////////////////////////////////////////// */
 @import "effet/vague";
-
 @import "effet/diagonal";
