--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,3 +44,10 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* ///////////////////////////////////////////////////////////////// */
 @import "effet/vague";
 @import "effet/diagonal";
+
+/* ///////////////////////////////////////////////////////////////// */
+/* Les différentes composantes du site                               */
+/* ///////////////////////////////////////////////////////////////// */
+
+@import "composant/recherches";
+@import "composant/sociaux";
