S3C2: Amélioration du design d'Arrière-plan avec des changements de couleurs et des changements de teintes partout

--- a/sass/base/_bouton.scss
+++ b/sass/base/_bouton.scss
@@ -17,7 +17,7 @@ button.entete__button {
 
     // Button:active
     &:active{
-        // background-image: var(--couleur-bouton-active);
+        background-image: black;
     }
     
 }
