--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,7 +13,7 @@
     --nb-element : 5;
     --increment-angle : calc(360/var(--nb-element));
     // 360 / 5 = 72
-    --angle-initial: 100;
+    --angle-initial: 174;
     --hu1 : var(--angle-initial);
     --hu2 : calc(var(--hu1) + var(--increment-angle));
     --hu3 : calc(var(--hu2) + var(--increment-angle));
@@ -51,9 +51,9 @@
 
     --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), 60%);
     --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 65%);
-    --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 70%);
+    --couleur-arriere-evenement: hsl(var(--hu2), var(--s-couleur-arriere), 70%);
     --couleur-arriere-galerie : hsl(var(--hu4), var(--s-couleur-arriere), 75%);
-    --couleur-arriere-footer: hsl(var(--hu5),var(--s-couleur-arriere), 80%);
+    --couleur-arriere-footer: hsl(var(--hu1),var(--s-couleur-arriere), 80%);
 
     --couleur-entete: hsl(var(--hu1), var(--s-couleur-arriere), 20%);
     --couleur-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 25%);
@@ -63,10 +63,10 @@
 
     --couleur-lien: #333;
     --couleur-lien-hover: #fff;
-    --couleur-lien-visited: #d32f2f;
+    --couleur-lien-visited: #a600ff;
 
-    --couleur-bouton-linear-gradient-1: #31572c ;
-    --couleur-bouton-linear-gradient-2: rgb(93, 165, 85); 
+    --couleur-bouton-linear-gradient-1: #31c5ff ;
+    --couleur-bouton-linear-gradient-2: rgb(41, 141, 255); 
     --couleur-dedans-blockquote:#f5f5f5;
 
 }
