--- a/sass/composant/_recherches.scss
+++ b/sass/composant/_recherches.scss
@@ -9,7 +9,7 @@
 
 /* Styles pour le bouton de recherche */
 .recherche__button {
-    background-color: grey;
+    background-color: rgb(78, 205, 255);
     color: #fff;
     padding: 10px 20px;
     border: none;
