--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ Ce thème a été développé dans le cadre du cours 4W4
   */
   --nb-element: 5;
   --increment-angle: calc(360/var(--nb-element));
-  --angle-initial: 100;
+  --angle-initial: 174;
   --hu1: var(--angle-initial);
   --hu2: calc(var(--hu1) + var(--increment-angle));
   --hu3: calc(var(--hu2) + var(--increment-angle));
@@ -58,9 +58,9 @@ Ce thème a été développé dans le cadre du cours 4W4
   --hu5: calc(var(--hu4) + 10);
   --couleur-arriere-entete: hsl(var(--hu1), var(--s-couleur-arriere), 60%);
   --couleur-arriere-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 65%);
-  --couleur-arriere-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 70%);
+  --couleur-arriere-evenement: hsl(var(--hu2), var(--s-couleur-arriere), 70%);
   --couleur-arriere-galerie: hsl(var(--hu4), var(--s-couleur-arriere), 75%);
-  --couleur-arriere-footer: hsl(var(--hu5),var(--s-couleur-arriere), 80%);
+  --couleur-arriere-footer: hsl(var(--hu1),var(--s-couleur-arriere), 80%);
   --couleur-entete: hsl(var(--hu1), var(--s-couleur-arriere), 20%);
   --couleur-accueil: hsl(var(--hu2), var(--s-couleur-arriere), 25%);
   --couleur-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 30%);
@@ -68,9 +68,9 @@ Ce thème a été développé dans le cadre du cours 4W4
   --couleur-footer: hsl(var(--hu5),var(--s-couleur-arriere), 40%);
   --couleur-lien: #333;
   --couleur-lien-hover: #fff;
-  --couleur-lien-visited: #d32f2f;
-  --couleur-bouton-linear-gradient-1: #31572c ;
-  --couleur-bouton-linear-gradient-2: rgb(93, 165, 85);
+  --couleur-lien-visited: #a600ff;
+  --couleur-bouton-linear-gradient-1: #31c5ff ;
+  --couleur-bouton-linear-gradient-2: rgb(41, 141, 255);
   --couleur-dedans-blockquote:#f5f5f5;
 }
 
@@ -118,6 +118,10 @@ button.entete__button:hover {
   background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-2), var(--couleur-bouton-linear-gradient-1));
   transform: scale(1.2);
 }
+button.entete__button:active {
+  background-image: black;
+}
+
 a {
   color: var(--couleur-lien);
   text-decoration: none;
@@ -341,7 +345,7 @@ ul li {
 
 /* Styles pour le bouton de recherche */
 .recherche__button {
-  background-color: grey;
+  background-color: rgb(78, 205, 255);
   color: #fff;
   padding: 10px 20px;
   border: none;
