--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -69,4 +69,6 @@
     --couleur-bouton-linear-gradient-2: rgb(41, 141, 255); 
     --couleur-dedans-blockquote:#f5f5f5;
 
+    --couleur-reseaux-sociaux : white;
+
 }
