S4C1: Début du développement de thème pour WordPress

--- a/style.css
+++ b/style.css
@@ -386,4 +386,19 @@ ul li {
 
 .sociaux svg {
   fill: var(--couleur-reseaux-sociaux);
+}
+
+.section__cours {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.carte {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 0 1 23%;
+  background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
 }/*# sourceMappingURL=style.css.map */
