--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,3 +51,4 @@ Ce thème a été développé dans le cadre du cours 4W4
 
 @import "composant/recherches";
 @import "composant/sociaux";
+@import "composant/carte";
