--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -16,11 +16,9 @@ h3 {
     font-size: clamp(1.25rem, 1.25rem + 2.5vw, 2.125rem);
 }
 
-h4,p {
-    font-size: clamp(1rem, 1rem + 1.5vw, 1.5rem);
-}
 
-h5 {
+
+h4, h5, p {
     font-size: clamp(0.9rem, 0.9rem + 1vw, 1.25rem);
 }
 
