--- a/sass/composant/_carte.scss
+++ b/sass/composant/_carte.scss
@@ -1,14 +1,15 @@
-.section__cours{
+.section__cours {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
 }
 
-.carte{
+.carte {
     padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     flex: 1 1 25%;
     background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
 }
