S4C2: Ajustement du fichier read.me et j'ai ajusté la forme des cartes. Le devoir est presque terminé

--- a/sass/composant/_carte.scss
+++ b/sass/composant/_carte.scss
@@ -5,11 +5,12 @@
 }
 
 .carte {
-    padding: 1rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     flex: 1 1 25%;
     background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
+    border-radius: 20px;
 }
