S5C1: On a eu la correction du labo3

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,12 @@ Ce thème a été développé dans le cadre du cours 4W4
 
 
 /* ///////////////////////////////////////////////////////////////// */
+/* Class utile                                                       */
+/* ///////////////////////////////////////////////////////////////// */
+@import "utile/local";
+
+
+/* ///////////////////////////////////////////////////////////////// */
 /* Les différents effets de la page                                  */
 /* ///////////////////////////////////////////////////////////////// */
 @import "effet/vague";
