--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,3 +58,4 @@ Ce thème a été développé dans le cadre du cours 4W4
 @import "composant/recherches";
 @import "composant/sociaux";
 @import "composant/carte";
+@import "composant/menu";
