--- a/style.css
+++ b/style.css
@@ -147,13 +147,13 @@ body {
   min-height: 30vh;
 }
 
-.global > section, .global > footer {
+.global > section, .global > footer, .global > .entete_menu {
   flex: 0 1 900px;
   padding: 5rem;
 }
 
 .global > header {
-  flex: 0 1 1300px;
+  flex: 0 1 1100px;
   padding: 5rem;
 }
 
@@ -416,4 +416,34 @@ ul li {
 
 .carte * {
   text-align: center;
+}
+
+/*
+<div id="menu" class="global">
+    <div class="entete_menu">
+    // Générer par wp_nav_menu()
+        <div class="menu-entete-container">
+            <ul id="menu-entete" class="menu">
+                <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-post current-menu-item menu-item-30"><a href="http://localhost:8080/4w4/2020/10/07/582-5mbtechnologies-emergentes-et-avancees-volet-creation-60h/" aria-current="page">Technologies émergentes en création</a></li>
+                <li id="menu-item-31" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-31"><a href="http://localhost:8080/4w4/2020/10/07/582-5w5-projet-web-en-equipe-105h/">Projet Web en équipe</a></li>
+                <li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-32"><a href="http://localhost:8080/4w4/2020/10/07/350-5n1-communication-et-dynamique-dune-equipe-de-travail-45h/">Communication</a></li>
+                <li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-33"><a href="http://localhost:8080/4w4/2020/10/07/393-5e1-methodes-de-recherche-et-preparation-au-marche-du-travail-45h/">Méthodes de recherche</a></li>
+                <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-34"><a href="http://localhost:8080/4w4/2020/10/07/582-4mb-animation-3d-75h/">Animation 3D</a></li>
+            </ul>
+        </div>        
+    </div>
+</div>
+*/
+.entete_menu {
+  border: 1px solid red;
+}
+
+.menu-entete-container {
+  width: 100%;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
 }/*# sourceMappingURL=style.css.map */
