--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -65,6 +65,10 @@
     --couleur-lien-hover: #fff;
     --couleur-lien-visited: #a600ff;
 
+    --couleur-lien-menu : #fff;
+    --couleur-lien-hover-menu: #333;
+    --couleur-lien-actuel-menu: grey;
+
     --couleur-bouton-linear-gradient-1: #31c5ff ;
     --couleur-bouton-linear-gradient-2: rgb(41, 141, 255); 
     --couleur-dedans-blockquote:#f5f5f5;
